Add UI to application and new backend logic
- Simple UI, but this dosen't include all functions yet. Only login, register, show listings, and create listing.
- Added logic to fetch categories [Endpoint, service & repo]
- Endpoint to get user data from jwt claim, this is needed for frontend.
- Refactored som names for conversations.
- Changes GetMessages endpoint to match correct response type (List)
