# server/Api.Rest/Controllers/UserController.cs
@@ -13,6 +13,20 @@ public class UserController(IUserService userService, IJwtService jwtService) : 
 
     private const string DeleteRoute = ControllerRoute + nameof(Delete);
 
+    private const string GetUserByEmailRoute = ControllerRoute + nameof(GetUserByEmail);
+    
+    
+    [HttpGet]
+    [Route(GetUserByEmailRoute)]
+    public async Task<ActionResult<UserResponseDto>> GetUserByEmail([FromHeader] string authorization)
+    {
+        var jwt = jwtService.VerifyJwtOrThrow(authorization);
+        if (jwt.Type != "Auth")
+            return Unauthorized();
+        
+        return Ok(await userService.GetUserByEmailAsync(jwt.Email));
+    }
+    
     [HttpPut]
     [Route(UpdateRoute)]
     public async Task<ActionResult<UserResponseDto>> Update([FromBody] UserUpdateRequestDto dto,
