# server/Application/Models/Dtos/Category/CategoryResponseDto.cs
@@ -1,0 +1,9 @@
+namespace Application.Models.Dtos.Category;
+
+public class CategoryResponseDto
+{
+    public string Id { get; set; } = null!;
+
+    public string Name { get; set; } = null!;
+
+}
