# server/Infrastructure.Postgres/Postgresql.Data/ConversationRepo.cs
@@ -7,13 +7,13 @@ namespace Infrastructure.Postgres.Postgresql.Data;
 
 public class ConversationRepo(MyDbContext ctx) : IConversationRepo
 {
-    public async Task<Conversation?> GetAsync(string conversationId)
+    public async Task<Conversation?> GetConversationAsync(string conversationId)
     {
         var conversation = await ctx.Conversations.FirstOrDefaultAsync(c => c.Id == conversationId);
         return conversation;
     }
 
-    public async Task<Conversation?> GetByListingAndBuyerAsync(string listingId, string buyerUserId)
+    public async Task<Conversation?> GetConversationByListingAndBuyerAsync(string listingId, string buyerUserId)
     {
         var conversation = await ctx.Conversations.FirstOrDefaultAsync(c =>
             c.ListingId == listingId &&
@@ -22,10 +22,16 @@ public class ConversationRepo(MyDbContext ctx) : IConversationRepo
         return conversation;
     }
 
-    public async Task<Conversation> CreateAsync(Conversation conversation)
+    public async Task<Conversation> CreateConversationAsync(Conversation conversation)
     {
         await ctx.Conversations.AddAsync(conversation);
         await ctx.SaveChangesAsync();
         return conversation;
+    }
+
+    public async Task<List<Conversation>> GetAllConversationsByUserIdAsync(string userId)
+    {
+        var conversations = await ctx.Conversations.Where(c => c.BuyerUserId == userId).ToListAsync();
+        return conversations;
     }
 }
