# server/Startup/openapi.json
@@ -142,6 +142,29 @@
         }
       }
     },
+    "/api/categoryGetCategories": {
+      "get": {
+        "tags": [
+          "Category"
+        ],
+        "operationId": "Category_GetCategories",
+        "responses": {
+          "200": {
+            "description": "",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "array",
+                  "items": {
+                    "$ref": "#/components/schemas/CategoryResponseDto"
+                  }
+                }
+              }
+            }
+          }
+        }
+      }
+    },
     "/api/conversation/Create": {
       "post": {
         "tags": [
@@ -177,6 +200,39 @@
               "application/json": {
                 "schema": {
                   "$ref": "#/components/schemas/ConversationResponseDto"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/api/conversationGetOwnConversations": {
+      "get": {
+        "tags": [
+          "Conversation"
+        ],
+        "operationId": "Conversation_GetOwnConversations",
+        "parameters": [
+          {
+            "name": "authorization",
+            "in": "header",
+            "schema": {
+              "type": "string"
+            },
+            "x-position": 1
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "array",
+                  "items": {
+                    "$ref": "#/components/schemas/ConversationResponseDto"
+                  }
                 }
               }
             }
@@ -393,6 +449,36 @@
         }
       }
     },
+    "/api/listing/GetListingById": {
+      "get": {
+        "tags": [
+          "Listing"
+        ],
+        "operationId": "Listing_GetListingById",
+        "parameters": [
+          {
+            "name": "listingId",
+            "in": "query",
+            "schema": {
+              "type": "string"
+            },
+            "x-position": 1
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/ListingResponseDto"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
     "/api/message/messages": {
       "get": {
         "tags": [
@@ -421,10 +507,12 @@
           "200": {
             "description": "",
             "content": {
-              "application/octet-stream": {
+              "application/json": {
                 "schema": {
-                  "type": "string",
-                  "format": "binary"
+                  "type": "array",
+                  "items": {
+                    "$ref": "#/components/schemas/MessageResponseDto"
+                  }
                 }
               }
             }
@@ -467,6 +555,36 @@
               "application/json": {
                 "schema": {
                   "$ref": "#/components/schemas/MessageResponseDto"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/api/user/GetUserByEmail": {
+      "get": {
+        "tags": [
+          "User"
+        ],
+        "operationId": "User_GetUserByEmail",
+        "parameters": [
+          {
+            "name": "authorization",
+            "in": "header",
+            "schema": {
+              "type": "string"
+            },
+            "x-position": 1
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/UserResponseDto"
                 }
               }
             }
@@ -603,6 +721,18 @@
         "additionalProperties": false,
         "properties": {
           "code": {
+            "type": "string"
+          }
+        }
+      },
+      "CategoryResponseDto": {
+        "type": "object",
+        "additionalProperties": false,
+        "properties": {
+          "id": {
+            "type": "string"
+          },
+          "name": {
             "type": "string"
           }
         }
